output/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-debian
  namespace: web-debian
spec:
  selector:
    app: web-debian
  ports:
    - port: 80
      targetPort: 80
